--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+html{
+  box-sizing: border-box;
+}
+
+.header{
+  background: url(./fon.jpg) repeat center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+}
+
 .background {
   padding: 10;
   width: 100%;
@@ -7,13 +20,84 @@
   opacity: 0.6;
 }
 
-h3 {
-  font-family: Georgia;
-  color: grey;
+h1{
+  color: white;
+  text-align: center;
 }
 
-.main {
-  font-family: 'Times New Roman', Times, serif;
-  font-style: italic;
-  border: 1; 
+h3 {
+  font-family: Georgia;
+  color: #CD6326;
+  text-align: center;
+}
+
+.wrapper{
+  max-width: 1200px; /*максимальная ширина блока*/
+  margin: 0 auto; /*выравнивание по центру*/
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.cv_foto{
+  max-width: 450px;
+}
+
+.cv_info{
+padding-top: 70px;
+max-width: 100%;
+background: url(./layout.jpg);
+}
+
+.left_table{
+  border: 1px solid black;
+  margin-top: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-between; 
+}
+
+ul.column{
+list-style-image: url(./arrow.png);
+}
+
+ul.column2{
+list-style-image: url(./check.png);
+}
+
+.footer{
+  background: url(./fon.jpg) repeat center;
+  width: 100%;
+}
+
+h4{
+  margin: 0 auto;
+  color: white;
+  text-align: center;
+}
+
+h5{
+  color: #19b6fa;
+  margin-right: 10px;
+  text-align: right;
+  margin-bottom: 0;
+}
+
+
+.rs_logo{
+  width: 30px;
+}
+
+.yt_link{
+  width: 30px;
+  margin-left:5px;
+}
+
+.footer_link{
+ display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start; 
+    justify-content: space-between;
 }
